--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "appium-repl",
   "version": "0.0.1",
   "description": "Simple REPL (Read-eval-print Loop) for controlling mobile apps through Appium",
-  "main": "AppiumRepl.js",
+  "main": "./lib/appium-repl.js",
   "dependencies": {
     "colors": "^0.6.2",
     "wd": "^0.3",
