--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "./lib/appium-repl.js",
   "dependencies": {
     "colors": "^0.6.2",
-    "wd": "^0.3",
-    "telme-promise": "^0.1.0",
     "prompt": "0.2.13",
-    "underscore":"1.6.0"
+    "q": "^1.0.1",
+    "telme-promise": "^0.1.0",
+    "underscore": "1.6.0",
+    "wd": "^0.3"
   },
   "devDependencies": {},
   "scripts": {
