--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
   "name": "appium-repl",
   "version": "0.0.2",
   "description": "Simple REPL (Read-eval-print Loop) for controlling mobile apps through Appium",
-  "main": "./lib/appium-repl.js",
+  "preferGlobal": true,
+  "bin": {
+    "appium-repl": "./lib/appium-repl.js"
+  },
   "dependencies": {
     "colors": "^0.6.2",
+    "nomnom": "^1.8.1",
+    "promirepl": "^1.0.1",
     "prompt": "0.2.13",
     "q": "^1.0.1",
     "telme-promise": "^0.1.0",
     "underscore": "1.6.0",
     "wd": "^0.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^1.7.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -25,6 +32,9 @@
     "automation-repl"
   ],
   "author": "Jonah , Moiz",
+  "contributors": [
+    "Gavin Mogan <gavin@saucelabs.com>"
+  ],
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/moizjv/AppiumRepl/issues"
