--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "colors": "^0.6.2",
     "prompt": "0.2.13",
     "q": "^1.0.1",
+    "sample-apps": "^2.0.1",
     "telme-promise": "^0.1.0",
     "underscore": "1.6.0",
     "wd": "^0.3"
