--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "appium-repl",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "Simple REPL (Read-eval-print Loop) for controlling mobile apps through Appium",
   "preferGlobal": true,
   "bin": {
-    "appium-repl": "./lib/appium-repl.js"
+    "appium-repl": "./bin/appium-repl.js"
   },
   "dependencies": {
     "colors": "^0.6.2",
@@ -14,7 +14,7 @@
     "q": "^1.0.1",
     "telme-promise": "^0.1.0",
     "underscore": "1.6.0",
-    "wd": "^0.3"
+    "wd": "~1.0.0"
   },
   "devDependencies": {
     "eslint": "^1.7.1"
