--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
   "bin": {
     "appium-repl": "./bin/appium-repl.js"
   },
+  "main": "bin/appium-repl.js",
   "dependencies": {
     "colors": "^1.3.3",
     "nomnom": "^1.8.1",
-    "promirepl": "^1.0.1",
-    "q": "^2.0.3",
     "telme-promise": "^1.0.0",
     "underscore": "1.9.1",
     "wd": "~1.11.1"
